--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import com.bmuschko.gradle.docker.DockerRegistryCredentials
+
 ext.dataServiceVersion=project.properties['data-service.version'] ?:project.version
 ext.frontDoorDataServiceVersion=project.properties['front-door-data-service.version'] ?:project.version
 
@@ -21,6 +23,14 @@ allprojects {
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
+
+    project.ext.dockerRegistryCredentials = new DockerRegistryCredentials()
+    project.ext.dockerRegistryCredentials.url =project.dockerRegistry
+    project.ext.dockerRegistryCredentials.username="unused"
+    project.ext.dockerRegistryCredentials.password="oc whoami -t".execute().text.trim()
+    project.ext.dockerRegistryCredentials.email="unused"
+
+
 }
 
 apply from: "openshift-support.gradle"
@@ -136,8 +146,6 @@ buildscript {
 // use fully qualified class name
 apply plugin: com.bmuschko.gradle.docker.DockerRemoteApiPlugin
 
-// import task classes
-import com.bmuschko.gradle.docker.tasks.image.*
 
 dependencyUpdates.resolutionStrategy = {
     componentSelection { rules ->
@@ -209,8 +217,6 @@ dockerCompose {
     removeVolumes = false
 
 }
-
-
 
 task dockerTidy(type: Exec) {
     executable = 'setup-files/scripts/docker/docker_tidy_up.sh'
