--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -75,8 +75,6 @@ validation.standard.name.invalid=Please enter a valid name.
 validation.standard.name.length.min=The name should have at least {2} characters.
 validation.standard.name.length.max=The last name cannot have more than 70 characters.
 
-validation.standard.user.search.min=Your need to provide at least {2} characters to initate search.
-
 validation.standard.disability.selectionrequired=Please select a disability.
 
 validation.standard.gender.selectionrequired=Please select a gender.
@@ -539,3 +537,7 @@ CANNOT_GET_ANY_USERS_FOR_PROJECT=Cannot get any users for project {0}.  Project 
 
 # Internal user partner summary page
 QUERIES_CANNOT_BE_SENT_AS_FINANCE_CONTACT_NOT_SUBMITTED=Cannot send queries to partner as they have not submitted a finance contact to represent them on the project.
+
+# External user search
+USER_SEARCH_INVALID_INPUT_LENGTH=Your need to provide at least {2} characters to initate search.
+validation.standard.user.search.min=Your need to provide at least {2} characters to initate search.
