--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -539,5 +539,5 @@ CANNOT_GET_ANY_USERS_FOR_PROJECT=Cannot get any users for project {0}.  Project 
 QUERIES_CANNOT_BE_SENT_AS_FINANCE_CONTACT_NOT_SUBMITTED=Cannot send queries to partner as they have not submitted a finance contact to represent them on the project.
 
 # External user search
-USER_SEARCH_INVALID_INPUT_LENGTH=Your need to provide at least {2} characters to initiate search.
-validation.standard.user.search.min=Your need to provide at least {2} characters to initiate search.
+USER_SEARCH_INVALID_INPUT_LENGTH=You need to provide at least {2} characters to initiate search.
+validation.standard.user.search.min=You need to provide at least {2} characters to initiate search.
