--- a/ifs-sil-stub/docker/Dockerfile-template
+++ b/ifs-sil-stub/docker/Dockerfile-template
@@ -1,8 +1,7 @@
-FROM davidcaste/alpine-java-unlimited-jce:jdk8
+FROM innovateuk/app-base-image
 MAINTAINER Richard Popple <richard@hiveit.co.uk>
 EXPOSE 8080
 ENV JAVA_OPTS -Xmx300m
-RUN apk --update add curl
 
 WORKDIR /
 VOLUME /tmp
