--- a/ifs-auth-service/ifs-ldap-service/build.gradle
+++ b/ifs-auth-service/ifs-ldap-service/build.gradle
@@ -1,4 +1,5 @@
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 import org.apache.tools.ant.filters.ReplaceTokens
 
 def String ldapCertsVolume = 'src/main/docker/certs'
@@ -40,4 +41,24 @@ task buildDocker(type: DockerBuildImage) {
 
     tag = 'innovateuk/ldap-service:latest'
     inputDir = file("${project.buildDir}/docker")
+}
+
+task buildDockerForOS(type: DockerBuildImage) {
+    dependsOn prepareDockerFile
+    tag = project.dockerRegistry+"/"+openshiftEnv+"/ldap-service:latest"
+    inputDir = project.file("$project.buildDir/docker")
+}
+
+task tagDocker(type: DockerTagImage) {
+    dependsOn buildDockerForOS
+    imageId = buildDockerForOS.getTag()
+    repository = project.dockerRegistry+"/"+openshiftEnv+"/ldap-service"
+    tag = project.version
+}
+
+task pushDocker(type: com.bmuschko.gradle.docker.tasks.image.DockerPushImage) {
+    dependsOn tagDocker
+    registryCredentials = project.ext.dockerRegistryCredentials
+    imageName=project.dockerRegistry+"/"+openshiftEnv+"/ldap-service"
+    tag = project.version
 }
