--- a/ifs-data-layer/build.gradle
+++ b/ifs-data-layer/build.gradle
@@ -94,7 +94,7 @@ subprojects {
         }
 
 
-        task pushDocker(type: com.bmuschko.gradle.docker.tasks.image.DockerPushImage) {
+        task osStageRemote(type: com.bmuschko.gradle.docker.tasks.image.DockerPushImage) {
             dependsOn tagDocker
             registryCredentials = project.ext.dockerRegistryCredentials
             imageName=project.dockerRegistry+"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
