--- a/docker/ifs-mysql/build.gradle
+++ b/docker/ifs-mysql/build.gradle
@@ -1,4 +1,5 @@
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
 import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 
 task buildDocker(overwrite: true, type: DockerBuildImage) {
@@ -22,7 +23,7 @@ task tagDocker(type: DockerTagImage) {
     tag = "5.6.29"
 }
 
-task osStageRemote(type: com.bmuschko.gradle.docker.tasks.image.DockerPushImage) {
+task osStageRemote(type: DockerPushImage) {
     onlyIf { !isNamedEnv() }
 
     dependsOn tagDocker
