--- a/ifs-registration-service/build.gradle
+++ b/ifs-registration-service/build.gradle
@@ -1,4 +1,5 @@
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
 import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 
 description = """"""
@@ -127,7 +128,7 @@ task tagDocker(type: DockerTagImage) {
     tag = project.version
 }
 
-task osStageRemote(type: com.bmuschko.gradle.docker.tasks.image.DockerPushImage) {
+task osStageRemote(type: DockerPushImage) {
     dependsOn tagDocker
     registryCredentials = project.ext.dockerRegistryCredentials
     imageName=project.dockerRegistry+"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
