--- a/ifs-sil-stub/build.gradle
+++ b/ifs-sil-stub/build.gradle
@@ -1,4 +1,5 @@
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
 import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 
 def targetBuild = hasProperty('profile') ? profile : 'docker';
@@ -106,7 +107,7 @@ task tagDocker(type: DockerTagImage) {
     tag = project.version
 }
 
-task osStageRemote(type: com.bmuschko.gradle.docker.tasks.image.DockerPushImage) {
+task osStageRemote(type: DockerPushImage) {
     onlyIf { isNotProductionEnv() }
     dependsOn tagDocker
     registryCredentials = project.ext.dockerRegistryCredentials
