--- a/ifs-web-service/build.gradle
+++ b/ifs-web-service/build.gradle
@@ -1,5 +1,6 @@
 import com.bmuschko.gradle.docker.DockerRegistryCredentials
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
 import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 
 def targetBuild = hasProperty('profile') ? profile : 'docker';
@@ -105,7 +106,7 @@ subprojects {
         }
 
 
-        task osStageRemote(type: com.bmuschko.gradle.docker.tasks.image.DockerPushImage) {
+        task osStageRemote(type: DockerPushImage) {
             dependsOn tagDocker
             registryCredentials = project.ext.dockerRegistryCredentials
             imageName=project.dockerRegistry+"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
