--- a/docker/ifs-mysql/build.gradle
+++ b/docker/ifs-mysql/build.gradle
@@ -2,15 +2,17 @@ import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
 import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
 import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 
+def sqlVersion="5.6.29"
+
 task buildDocker(overwrite: true, type: DockerBuildImage) {
-    tag = "innovateuk/ifs-mysql:5.6.29"
+    tag = "innovateuk/ifs-mysql:"+sqlVersion
     inputDir = project.projectDir
 }
 
 task buildDockerForOS(overwrite: true, type: DockerBuildImage) {
     onlyIf { !isNamedEnv() }
 
-    tag = project.dockerRegistry + "/" + openshiftEnv + "/ifs-mysql:5.6.29"
+    tag = project.dockerRegistry + "/" + openshiftEnv + "/"+sqlVersion
     inputDir = project.projectDir
 }
 
@@ -20,7 +22,7 @@ task tagDocker(type: DockerTagImage) {
     dependsOn buildDockerForOS
     imageId = buildDockerForOS.getTag()
     repository = project.dockerRegistry + "/" + openshiftEnv + "/ifs-mysql"
-    tag = "5.6.29"
+    tag = sqlVersion
 }
 
 task osStageRemote(type: DockerPushImage) {
@@ -29,7 +31,7 @@ task osStageRemote(type: DockerPushImage) {
     dependsOn tagDocker
     registryCredentials = project.ext.dockerRegistryCredentials
     imageName = project.dockerRegistry + "/" + openshiftEnv + "/ifs-mysql"
-    tag = "5.6.29"
+    tag = sqlVersion
 }
 
 
