--- a/ifs-auth-service/build.gradle
+++ b/ifs-auth-service/build.gradle
@@ -1,6 +1,34 @@
+import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
+import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
+
 subprojects{
     bootRepackage {
         onlyIf { Task task -> false }
+    }
+
+    task buildDocker(type: DockerBuildImage) {
+        tag = "innovateuk/"+project.name+":latest"
+        inputDir = file("${project.buildDir}/docker")
+    }
+
+    task buildDockerForOS(type: DockerBuildImage) {
+        tag = project.dockerRegistry+"/"+openshiftEnv+"/"+project.name+":latest"
+        inputDir = project.file("$project.buildDir/docker")
+    }
+
+    task tagDocker(type: DockerTagImage) {
+        dependsOn buildDockerForOS
+        imageId = buildDockerForOS.getTag()
+        repository = project.dockerRegistry+"/"+openshiftEnv+"/"+project.name
+        tag = project.version
+    }
+
+    task osStageRemote(type: DockerPushImage) {
+        dependsOn tagDocker
+        registryCredentials = project.ext.dockerRegistryCredentials
+        imageName=project.dockerRegistry+"/"+openshiftEnv+"/"+project.name
+        tag = project.version
     }
 }
 
