--- a/ifs-auth-service/ifs-sp-service/build.gradle
+++ b/ifs-auth-service/ifs-sp-service/build.gradle
@@ -1,6 +1,3 @@
-import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
-import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
-import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 import org.apache.tools.ant.filters.ReplaceTokens
 
 def String spCertsVolume = 'src/main/docker/certs'
@@ -51,29 +48,5 @@ task prepareDockerFile {
     }
 }
 
-task buildDocker(type: DockerBuildImage) {
-    dependsOn prepareDockerFile
-
-    tag = 'innovateuk/sp-service:latest'
-    inputDir = project.file("$project.buildDir/docker")
-}
-
-task buildDockerForOS(type: DockerBuildImage) {
-    dependsOn prepareDockerFile
-    tag = project.dockerRegistry+"/"+openshiftEnv+"/sp-service:latest"
-    inputDir = project.file("$project.buildDir/docker")
-}
-
-task tagDocker(type: DockerTagImage) {
-    dependsOn buildDockerForOS
-    imageId = buildDockerForOS.getTag()
-    repository = project.dockerRegistry+"/"+openshiftEnv+"/sp-service"
-    tag = project.version
-}
-
-task osStageRemote(type: DockerPushImage) {
-    dependsOn tagDocker
-    registryCredentials = project.ext.dockerRegistryCredentials
-    imageName=project.dockerRegistry+"/"+openshiftEnv+"/sp-service"
-    tag = project.version
-}
+buildDocker.dependsOn prepareDockerFile
+buildDockerForOS.dependsOn prepareDockerFile
