--- a/openshift-support.gradle
+++ b/openshift-support.gradle
@@ -70,13 +70,6 @@ task dbAnonymisedDumpUat(type:Exec) {
     args = [openshiftEnv, "uat", project.version]
 }
 
-task importAnonDataIntoUat(type:Exec) {
-    dependsOn processResources
-    executable = 'setup-files/scripts/openshift/import-anon-data-into-environment.sh.sh'
-    args = [openshiftEnv, "uat",  project.version]
-}
-
-
 // Demo tasks
 
 task osStageDemo(type:Exec) {
@@ -221,6 +214,12 @@ task dbAnonymisedDumpRemote(type:Exec) {
     dependsOn processResources
     executable = 'setup-files/scripts/openshift/db-anonymised-dump.sh'
     args = [openshiftEnv, "remote", project.version]
+}
+
+task importAnonDataIntoRemote(type:Exec) {
+    dependsOn processResources
+    executable = 'setup-files/scripts/openshift/import-anon-data-into-environment.sh'
+    args = [openshiftEnv, "remote",  project.version]
 }
 
 task robotTestsFilter (type: Copy) {
