--- a/ifs-data-layer/ifs-data-service/src/main/docker/Dockerfile-dbreset
+++ b/ifs-data-layer/ifs-data-service/src/main/docker/Dockerfile-dbreset
@@ -4,6 +4,8 @@ VOLUME /tmp
 RUN apt-get update -y && apt-get install -y mysql-client ldap-utils
 COPY db/ /flyway/sql/db
 ADD ldap-sync-from-ifs-db.sh /
+ADD clean-migrate-db.sh /
+ADD clean-migrate-db-sync-ldap.sh /
 
 RUN touch /flyway/flyway.conf && chgrp -R 0 /flyway/flyway.conf && chmod -R g+rwX /flyway/flyway.conf
 
