--- a/openshift-support.gradle
+++ b/openshift-support.gradle
@@ -70,6 +70,12 @@ task dbAnonymisedDumpUat(type:Exec) {
     args = [openshiftEnv, "uat", project.version]
 }
 
+task importAnonDataIntoUat(type:Exec) {
+    dependsOn processResources
+    executable = 'setup-files/scripts/openshift/import-anon-data-into-environment.sh'
+    args = [openshiftEnv, "uat",  project.version]
+}
+
 // Demo tasks
 
 task osStageDemo(type:Exec) {
@@ -220,6 +226,12 @@ task importAnonDataIntoRemote(type:Exec) {
     dependsOn processResources
     executable = 'setup-files/scripts/openshift/import-anon-data-into-environment.sh'
     args = [openshiftEnv, "remote",  project.version]
+}
+
+task dbResetRemote(type:Exec) {
+    dependsOn processResources
+    executable = 'setup-files/scripts/openshift/db-reset.sh'
+    args = [openshiftEnv, "remote", project.version]
 }
 
 task robotTestsFilter (type: Copy) {
