IFS-2184 - Refactors CompetitionInvite, clearer naming and moves competition classes into a separate package.

--- a/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
+++ b/ifs-web-service/ifs-web-core/src/main/resources/ValidationMessages.properties
@@ -269,10 +269,10 @@ validation.inviteNewAssessorsForm.selectedInnovationArea.required=Please enter a
 validation.inviteNewAssessorsForm.invites.required=Please add at least one person to invite.
 validation.inviteNewAssessorsForm.invites.email.required=Please enter an email address.
 validation.newUserStagedInviteResource.name.required=An assessor name is required.
-validation.competitionInvite.create.email.exists=An invite has already been created for this email address.
-validation.competitionInvite.create.innovationArea.required=Please enter a valid innovation area.
+validation.competitionAssessmentInvite.create.email.exists=An invite has already been created for this email address.
+validation.competitionAssessmentInvite.create.innovationArea.required=Please enter a valid innovation area.
 validation.availableAssessorsForm.selectedSortField.required=Please select a field to sort with.
-error.competitionInvite.create.failed=Could not invite assessor with email address {0}.
+error.competitionAssessmentInvite.create.failed=Could not invite assessor with email address {0}.
 
 email.already.in.invite=You have used this email address for another applicant.
 
