--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,2 @@
 version=1.1.23-SNAPSHOT
-dockerRegistry=https://index.docker.io/v1/
+dockerRegistry=docker-registry-default.apps.prod.ifs-test-clusters.com
