--- a/ifs-data-layer/build.gradle
+++ b/ifs-data-layer/build.gradle
@@ -1,4 +1,3 @@
-import com.bmuschko.gradle.docker.DockerRegistryCredentials
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
 import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
 import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
@@ -6,6 +5,7 @@ import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
 // This is necessary because the java plugin is also applied to
 // the ifs-data-layer project, which does _not_ build a jar.
 bootRepackage.enabled = false
+
 
 subprojects {
 
@@ -102,6 +102,19 @@ subprojects {
             tag=project.version
         }
 
+        task tagDockerLocal(type: DockerTagImage) {
+            dependsOn buildDockerForOS
+            imageId = buildDockerForOS.getTag()
+            repository = localDockerRegistryCredentials.url+"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
+            tag = project.version
+        }
+
+        task osStageLocal(type: DockerPushImage) {
+            dependsOn tagDockerLocal
+            registryCredentials = project.ext.localDockerRegistryCredentials
+            imageName=localDockerRegistryCredentials.url +"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
+            tag = project.version
+        }
 
         // Workaround for https://github.com/spring-projects/spring-boot/issues/8308
         // Can reinstate excludeDevtools in the bootRepackage task in next release
