--- a/ifs-web-service/build.gradle
+++ b/ifs-web-service/build.gradle
@@ -1,4 +1,3 @@
-import com.bmuschko.gradle.docker.DockerRegistryCredentials
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
 import com.bmuschko.gradle.docker.tasks.image.DockerPushImage
 import com.bmuschko.gradle.docker.tasks.image.DockerTagImage
@@ -113,6 +112,19 @@ subprojects {
             tag=project.version
         }
 
+        task tagDockerLocal(type: DockerTagImage) {
+            dependsOn buildDockerForOS
+            imageId = buildDockerForOS.getTag()
+            repository = localDockerRegistryCredentials.url+"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
+            tag = project.version
+        }
+
+        task osStageLocal(type: DockerPushImage) {
+            dependsOn tagDockerLocal
+            registryCredentials = project.ext.localDockerRegistryCredentials
+            imageName=localDockerRegistryCredentials.url +"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
+            tag = project.version
+        }
 
         // Workaround for https://github.com/spring-projects/spring-boot/issues/8308
         // Can reinstate excludeDevtools in the bootRepackage task in next release
