--- a/openshift-support.gradle
+++ b/openshift-support.gradle
@@ -162,13 +162,18 @@ task dbAnonymisedDumpLocal(type:Exec) {
     args = [openshiftEnv, "local", project.version]
 }
 
+task createProjectLocal(type:Exec) {
+    executable = 'setup-files/scripts/openshift/os-create-project.sh'
+    args = [openshiftEnv, "local"]
+}
+
 
 // Remote tasks
 
 
 task createProject(type:Exec) {
     executable = 'setup-files/scripts/openshift/os-create-project.sh'
-    args = [openshiftEnv]
+    args = [openshiftEnv, "remote"]
 }
 
 task osDeployFractalRemote(type:Exec) {
