--- a/openshift-support.gradle
+++ b/openshift-support.gradle
@@ -9,14 +9,22 @@ processResources {
     from ('os-files') {
         include '**/*.yml'
     }
+    // Note the presence of a $ character that is not then substituted or escaped
+    // will cause process resources to fail.  This is why we are selective here
+    //about which directories / files we perform property substitution on.
+    //top level files
     filesMatching("*.*") {
         expand project.properties
     }
+    // shib yml files
+    filesMatching("shib/*.*") {
+        expand project.properties
+    }
+
+    filesMatching("sil-stub/*.*") {
+        expand project.properties
+    }
 }
-
-
-// Production tasks
-
 
 task osDeployProduction(type:Exec) {
     dependsOn processResources
