--- a/ifs-auth-service/build.gradle
+++ b/ifs-auth-service/build.gradle
@@ -12,14 +12,9 @@ subprojects{
         inputDir = file("${project.buildDir}/docker")
     }
 
-    task buildDockerForOS(type: DockerBuildImage) {
-        tag = project.dockerRegistry+"/"+openshiftEnv+"/"+project.name+":latest"
-        inputDir = project.file("$project.buildDir/docker")
-    }
-
     task tagDocker(type: DockerTagImage) {
-        dependsOn buildDockerForOS
-        imageId = buildDockerForOS.getTag()
+        dependsOn buildDocker
+        imageId = buildDocker.getTag()
         repository = project.dockerRegistry+"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
         tag = project.version
     }
@@ -32,8 +27,8 @@ subprojects{
     }
 
     task tagDockerLocal(type: DockerTagImage) {
-        dependsOn buildDockerForOS
-        imageId = buildDockerForOS.getTag()
+        dependsOn buildDocker
+        imageId = buildDocker.getTag()
         repository = localDockerRegistryCredentials.url+"/"+openshiftEnv+"/"+project.name.replaceAll(/ifs-/,"")
         tag = project.version
     }
