--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,3 @@
 version=1.1.23-SNAPSHOT
-dockerRegistry=docker-registry-default.apps.prod.ifs-test-clusters.com
+application-service.version=1.1.23-SINGLE
+dockerRegistry=docker-registry-default.apps.prd.ifs-test-clusters.como
