--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 version=1.1.23-SNAPSHOT
 application-service.version=1.1.23-SINGLE
-dockerRegistry=docker-registry-default.apps.prd.ifs-test-clusters.como
+dockerRegistry=docker-registry-default.apps.prod.ifs-test-clusters.com
