Independent version numbers for application

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,19 @@
 version=1.1.23-SNAPSHOT
-application-service.version=1.1.23-SINGLE
+data-service.version=1.1.23-DATA
+
+application-service.version=1.1.23-APPLICATION
+front-door-service.version=1.1.23-FRONT
+assessment-service.version=1.1.23-ASSSESSMENT
+competition-mgt-service.version=1.1.23-COMPMGT
+project-setup-mgt-service.version=1.1.23-PROJMGT
+project-setup-service.version=1.1.23-PROJ
+
+registration-service.version=1.1.23-REG
+
+sp.version=1.1.23-SP
+idp.version=1.1.23-IDP
+
+
+ldap.version=1.1.23-LDAP
+sil-stub.version=1.1.23-SILSTUB
 dockerRegistry=docker-registry-default.apps.prod.ifs-test-clusters.com
