--- a/ifs-data-layer/ifs-data-service/build.gradle
+++ b/ifs-data-layer/ifs-data-service/build.gradle
@@ -22,6 +22,13 @@ configurations {
     providedRuntime
 }
 
+
+project.version = dataServiceVersion
+tagDocker.tag=dataServiceVersion
+osStageRemote.tag=dataServiceVersion
+tagDockerLocal.tag=dataServiceVersion
+osStageLocal.tag=dataServiceVersion
+
 ext.idpRestKey=project.properties['idp.rest.key'] ?:"1234567890"
 ext.companyHouseKey=ext.get('ifs.company-house.key')
 
