--- a/os-files/5-front-door-service.yml
+++ b/os-files/5-front-door-service.yml
@@ -23,7 +23,7 @@ items:
           deploymentconfig: front-door-svc
       spec:
         containers:
-        - image: innovateuk/front-door-service:${frontDoorDataServiceVersion}
+        - image: innovateuk/front-door-service:${frontDoorServiceVersion}
           name: front-door-svc
           livenessProbe:
             httpGet:
