--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,36 @@
 version=1.1.23-SNAPSHOT
-data-service.version=1.1.23-DATA
 
-application-service.version=1.1.23-APPLICATION
-front-door-service.version=1.1.23-FRONT
-assessment-service.version=1.1.23-ASSSESSMENT
-competition-mgt-service.version=1.1.23-COMPMGT
-project-setup-mgt-service.version=1.1.23-PROJMGT
-project-setup-service.version=1.1.23-PROJ
+# Single service deploy can be achieved by setting the properties below to a specific version
+# The osUpgradeXX tasks work by only deploying versions that are different to what is currently deployed
+# oc describe pod <pod_name>.  As an example if the current deployed version is 1.1.23-RELEASE
+# and we only want to deploy the data service. we would set:
+#
+# version=1.1.23-RELEASE
+# data-service.version=1.1.24-RELEASE
+# All other properties below would remain commented out.
+#
+# If we wish to do a full system deploy we would ensure that all properties below are commented out
+# and we would simply specify:
+# version=<new version number>
 
-registration-service.version=1.1.23-REG
+#data-service.version=1.1.23-DATA-VERSION
 
-sp.version=1.1.23-SP
-idp.version=1.1.23-IDP
+#application-service.version=1.1.23-APPLICATION-VERSION
+#front-door-service.version=1.1.23-FRONT-DOOR-VERSION
+#assessment-service.version=1.1.23-ASSESSMENT-VERSION
+#competition-mgt-service.version=1.1.23-COMPETITION-MGT-VERSION
+#project-setup-mgt-service.version=1.1.23-PROJECT-SETUP-MGT-VERSION
+#project-setup-service.version=1.1.23-PROJECT-SETUP-VERSION
+#registration-service.version=1.1.23-REGISTRATION-VERSION
+#
+# Note due to the build process currently generating the certificate each time
+# the sp and idp must currently use the same version (or to be specific the jars
+# must have been built in the same checkout of the code.)
+# See IFS-2134 for more details.
+#sp.version=1.1.23-SP-VERSION
+#idp.version=1.1.23-IDP-VERSION
 
 
-ldap.version=1.1.23-LDAP
-sil-stub.version=1.1.23-SILSTUB
+#ldap.version=1.1.23-LDAP-VERSION
+#sil-stub.version=1.1.23-SILSTUB-VERSION
 dockerRegistry=docker-registry-default.apps.prod.ifs-test-clusters.com
