--- a/ifs-web-service/ifs-competition-mgt-service/build.gradle
+++ b/ifs-web-service/ifs-competition-mgt-service/build.gradle
@@ -1,8 +1,8 @@
 project.version = competitionMgtServiceVersion
-tagDocker.tag=competitionMgtServiceVersion
-osStageRemote.tag=competitionMgtServiceVersion
-tagDockerLocal.tag=competitionMgtServiceVersion
-osStageLocal.tag=competitionMgtServiceVersion
+tagDocker.tag = competitionMgtServiceVersion
+osStageRemote.tag = competitionMgtServiceVersion
+tagDockerLocal.tag = competitionMgtServiceVersion
+osStageLocal.tag = competitionMgtServiceVersion
 
 jar {
     baseName = 'management'
