--- a/ifs-web-service/ifs-project-setup-service/build.gradle
+++ b/ifs-web-service/ifs-project-setup-service/build.gradle
@@ -3,10 +3,10 @@ jar {
 }
 
 project.version = projectSetupServiceVersion
-tagDocker.tag=projectSetupServiceVersion
-osStageRemote.tag=projectSetupServiceVersion
-tagDockerLocal.tag=projectSetupServiceVersion
-osStageLocal.tag=projectSetupServiceVersion
+tagDocker.tag = projectSetupServiceVersion
+osStageRemote.tag = projectSetupServiceVersion
+tagDockerLocal.tag = projectSetupServiceVersion
+osStageLocal.tag = projectSetupServiceVersion
 
 dependencies {
     compile project(':ifs-web-service:ifs-web-core')
