--- a/ifs-web-service/ifs-project-setup-mgt-service/build.gradle
+++ b/ifs-web-service/ifs-project-setup-mgt-service/build.gradle
@@ -3,10 +3,10 @@ jar {
 }
 
 project.version = projectSetupMgtServiceVersion
-tagDocker.tag=projectSetupMgtServiceVersion
-osStageRemote.tag=projectSetupMgtServiceVersion
-tagDockerLocal.tag=projectSetupMgtServiceVersion
-osStageLocal.tag=projectSetupMgtServiceVersion
+tagDocker.tag = projectSetupMgtServiceVersion
+osStageRemote.tag = projectSetupMgtServiceVersion
+tagDockerLocal.tag = projectSetupMgtServiceVersion
+osStageLocal.tag = projectSetupMgtServiceVersion
 
 dependencies {
     compile project(':ifs-web-service:ifs-web-core')
